force-app/main/default/objects/clofor_com_cfs__ObligationPaymentReq__c/fields/clofor_com_cfs__PlannedAmountForPeriodFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlannedAmountForPeriodFormula__c</fullName>
    <formula>clofor_com_cfs__TaxDeclarationID__r.clofor_com_cfs__PlannedAmountForPeriod__c</formula>
    <label>PLANNED AMOUNT FOR THE PERIOD-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>