force-app/main/default/objects/clofor_com_cfs__ObligationPaymentReq__c/fields/clofor_com_cfs__PlannedAmountForPeriodPayReq__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlannedAmountForPeriodPayReq__c</fullName>
    <label>PLANNED AMOUNT FOR THE PERIOD-PAY REQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>